[gd_scene load_steps=7 format=3 uid="uid://7401cgqmf2mb"]

[ext_resource type="Texture2D" uid="uid://c0ip8ircmut5d" path="res://dojo_background___night_by_missypena_d3ga2hl-fullview.jpg" id="1_m508i"]
[ext_resource type="PackedScene" uid="uid://d4foct8eeb7ob" path="res://Player/Player.tscn" id="2_f0adl"]
[ext_resource type="PackedScene" uid="uid://d3yfftjkimk25" path="res://Obsticals/Shogun.tscn" id="3_wdkv1"]
[ext_resource type="Script" path="res://Gold.gd" id="4_ugn72"]
[ext_resource type="Script" path="res://HP.tres.gd" id="5_kh8wv"]
[ext_resource type="Script" path="res://Control.gd" id="6_5mbax"]

[node name="Node2D" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2(739.786, -83.4137)

[node name="DojoBackgroundNightByMissypenaD3Ga2Hl-fullview" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(597.75, 330.125)
scale = Vector2(1.60167, 1.49008)
texture = ExtResource("1_m508i")

[node name="Player" parent="." instance=ExtResource("2_f0adl")]
position = Vector2(107, 522)
scale = Vector2(3.46806, 3.45659)

[node name="Node2D" parent="." instance=ExtResource("3_wdkv1")]
position = Vector2(906, 388)
scale = Vector2(4.34153, 3.86458)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Gold" type="Label" parent="UI"]
offset_left = 8.0
offset_top = 23.0
offset_right = 127.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Gold:"
script = ExtResource("4_ugn72")
metadata/_edit_use_anchors_ = true

[node name="HP" type="Label" parent="UI"]
offset_left = 9.0
offset_top = 50.0
offset_right = 128.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "HP: "
script = ExtResource("5_kh8wv")
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_5mbax")
metadata/_edit_use_anchors_ = true

[node name="Timer2" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 7.0
offset_top = -5.0
offset_right = 92.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "00:00
"
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="UI/Control"]
autostart = true

[connection signal="ready" from="UI/Control/Timer2" to="UI/Control" method="_on_timer_ready"]
[connection signal="timeout" from="UI/Control/Timer" to="UI/Control" method="_on_timer_timeout"]
